Apply the correct version semantics when using upstream master branch from git.
Refer Example 5.13 from the reference.

Reference: https://www.freebsd.org/doc/en_US.ISO8859-1/books/porters-handbook/makefile-distfiles.html

--- a/emulators/cannonball/Makefile
+++ b/emulators/cannonball/Makefile
@@ -1,8 +1,7 @@
 # $FreeBSD$
 
 PORTNAME=	cannonball
-PORTVERSION=	0.3
-DISTVERSIONPREFIX=v
+DISTVERSION=	g20171201
 CATEGORIES=	emulators
 
 MAINTAINER=	santhosh.raju@gmail.com
