Apply the right LICENSE type to the package.
Reference: https://www.freebsd.org/doc/en_US.ISO8859-1/books/porters-handbook/licenses.html

--- a/emulators/cannonball/Makefile
+++ b/emulators/cannonball/Makefile
@@ -7,8 +7,10 @@ CATEGORIES=	emulators
 MAINTAINER=	santhosh.raju@gmail.com
 COMMENT=	Enhanced OutRun Engine
 
-LICENSE=	GPLv2
+LICENSE=	MAME-LICENSE
+LICENSE_NAME=	MAME license
 LICENSE_FILE=	${WRKSRC}/docs/license.txt
+LICENSE_PERMS=	dist-mirror no-dist-sell pkg-mirror no-pkg-sell auto-accept
 
 LIB_DEPENDS=	libboost_program_options.so:devel/boost-libs
 
