--- a/emulators/cannonball/Makefile
+++ b/emulators/cannonball/Makefile
@@ -17,8 +17,9 @@ LIB_DEPENDS=	libboost_program_options.so:devel/boost-libs
 USES=		cmake:insource pkgconfig sdl
 USE_SDL=	sdl
 
-CMAKE_ARGS=	${WRKSRC}/cmake \
-		-DTARGET=bsd
+CMAKE_ARGS+=	${WRKSRC}/cmake
+CMAKE_ARGS+=	-DTARGET=bsd
+CMAKE_ARGS+=	-DBSD_PREFIX_PATH=${LOCALBASE}
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	djyt
@@ -27,7 +28,7 @@ GH_TAGNAME=	0c0814d
 BUILD_WRKSRC=		${WRKSRC}/cmake
 CONFIGURE_WRKSRC=	${WRKSRC}/cmake
 
-SUB_FILES=	${PORTNAME}.sh
+SUB_FILES=	${PORTNAME}.sh ${PORTNAME}.6
 
 do-install:
 	${MKDIR} ${STAGEDIR}${DATADIR}/res
@@ -35,6 +36,7 @@ do-install:
 	${INSTALL_DATA} ${WRKSRC}/cmake/res/tilemap.bin ${STAGEDIR}${DATADIR}/res/tilemap.bin
 	${INSTALL_DATA} ${WRKSRC}/cmake/res/tilepatch.bin ${STAGEDIR}${DATADIR}/res/tilepatch.bin
 	${INSTALL_DATA} ${WRKSRC}/cmake/config.xml ${STAGEDIR}${DATADIR}/conf/config.xml
+	${INSTALL_MAN} ${WRKDIR}/cannonball.6 ${STAGEDIR}${MAN1PREFIX}/man/man6
 	${INSTALL_SCRIPT} ${WRKDIR}/${PORTNAME}.sh ${STAGEDIR}${PREFIX}/bin/${PORTNAME}
 	${INSTALL_PROGRAM} ${WRKSRC}/cmake/cannonball ${STAGEDIR}${PREFIX}/libexec
 
